# DocMind

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260713_0001_initial_schema.py  20260713_0002_local_gemini_embedding_dimension.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: chats.py  documents.py  health.py  router.py
backend/app/chats/: __init__.py  models.py  repository.py  schemas.py  service.py
backend/app/common/: batching.py
backend/app/core/: config.py  constants.py  exceptions.py  handlers.py  logging.py  middleware.py
backend/app/database/: base.py  session.py
backend/app/documents/: __init__.py  chunking.py  models.py  parsers.py  repository.py  schemas.py  service.py
backend/app/embeddings/: base.py  factory.py  gemini.py  openai.py
backend/app/errors/: __init__.py  application.py  base.py  provider.py
backend/app/errors/mappers/: __init__.py  (+3 more)
backend/app/health/: __init__.py  service.py
backend/app/llm/: base.py  factory.py  gemini.py  openai.py
backend/app/storage/: __init__.py  base.py  minio.py
backend/app/workers/: __init__.py  settings.py  tasks.py
backend/tests/: conftest.py  test_api_collections.py  test_batching.py  test_config.py  test_gemini_embeddings.py  test_gemini_llm.py  test_health.py  test_models.py  test_phase2.py  test_provider_error_mappers.py  test_provider_refactor.py  test_repository.py  test_storage.py  test_worker_processing.py
(+23 files in other folders)
