[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docmind-backend"
version = "0.1.0"
description = "Backend foundation for Chat With Your Docs"
requires-python = ">=3.12"
dependencies = [
  "aioboto3>=13.1,<14",
  "alembic>=1.13,<2",
  "arq>=0.26,<1",
  "asyncpg>=0.29,<1",
  "fastapi>=0.115,<1",
  "google-genai>=2.11,<3",
  "httpx>=0.27,<1",
  "openai>=1.59,<2",
  "pgvector>=0.3,<1",
  "pydantic-settings>=2.5,<3",
  "PyMuPDF>=1.24,<2",
  "python-docx>=1.1,<2",
  "python-multipart>=0.0.9,<1",
  "redis>=5,<6",
  "sqlalchemy[asyncio]>=2.0.35,<3",
  "structlog>=24.4,<26",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.6,<1",
  "types-aioboto3[s3]>=13.1,<14",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["fitz"]
ignore_missing_imports = true

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
